--- a/src/ShoppingCart.html
+++ b/src/ShoppingCart.html
@@ -609,7 +609,7 @@
               <p>مبلغ نهایی</p>
               <p>0</p>
             </div>
-            <div class="mx-auto hidden w-[90%] md:visible">
+            <div class="mx-auto w-[90%] max-md:hidden">
               <button
                 class="w-full rounded-2xl bg-rgba(255,201,35,1) py-1 font-Khand font-semibold md:py-1 md:text-[1.25vw]"
               >
