--- a/src/MainPage.html
+++ b/src/MainPage.html
@@ -108,7 +108,6 @@
         </div>
       </section>
       <!-- product section -->
-      <!-- product section -->
       <section
         dir="rtl"
         class="relative !mb-[40vw] flex justify-center pt-[40vw] md:!mb-[5vw] md:pt-[10vw]"
@@ -188,8 +187,7 @@
           <div
             class="slider flex w-full gap-[20vw] p-[10vw] pb-[17.5vw] transition-transform duration-500 md:gap-[5vw] md:px-[4vw] md:py-0 md:pb-[7.5vw]"
           >
-            <!-- in case you want to add a product, copy from product 4 or later -->
-            <!-- first product -->
+            <!-- product 1-->
             <div
               class="product mt-[10vw] flex min-w-full flex-col gap-[5vw] overflow-hidden rounded-[3vw] bg-white p-[5vw] shadow-0px,4px,4px,0px shadow-rgba(0,0,0,25%) md:mx-0 md:mt-0 md:min-w-[24vw] md:basis-[30%] md:gap-[1.25vw] md:rounded-[1vw] md:p-[1vw] md:pb-[1.75vw]"
             >
