testing new branch

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/resources/css/output.css" />
   </head>
 
-  <body class="space-y-[5vw]">
+  <body>
     <main
-      class="flex flex-col items-center md:flex-row md:items-center md:justify-center md:gap-[7.5vw]"
+      class="flex flex-col items-center gap-4 md:flex-row md:items-center md:justify-center md:gap-8"
     >
       <!-- left/top astronaut image -->
-      <div class="w-[80vw] md:basis-2/5">
+      <div class="flex w-4/5 md:w-auto md:basis-2/5">
         <img
           class="w-full"
           src="SVGs/about-us-astronaut.svg"
@@ -20,11 +20,16 @@
         />
       </div>
       <!-- right/bottom text -->
-      <article dir="rtl" class="md:mt-[2.5vw] md:basis-2/5 md:self-start">
+      <article
+        dir="rtl"
+        class="flex justify-center md:mt-6 md:basis-2/5 md:self-start"
+      >
         <div
-          class="text-rgba(75,85,99,1) flex w-[80vw] flex-col items-center gap-[3vw] text-center font-Khand text-[3vw] md:w-auto md:items-start md:gap-[1vw] md:text-justify md:text-[1vw]"
+          class="md:text-2xs flex w-4/5 flex-col items-center gap-4 text-center font-Khand text-xs text-rgba(75,85,99,1) sm:text-sm md:w-auto md:items-start md:gap-2 md:text-justify md:leading-normal lg:gap-4 lg:text-xs xl:gap-6 xl:text-base"
         >
-          <h1 class="font-IR_Kelma text-[7vw] text-black md:text-[3.5vw]">
+          <h1
+            class="font-IR_Kelma text-2xl text-black sm:text-3xl md:text-2xl lg:text-4xl xl:text-5xl"
+          >
             <span class="text-rgba(3,81,70,1)"
               >سلام<span class="text-rgba(255,201,35,1)">!</span></span
             >ماپراپلرمدلیم.
