--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <main
-      class="flex flex-col gap-[10vw] md:mx-auto md:w-[90%] md:flex-row md:justify-between md:gap-0"
+      class="flex flex-col gap-[10vw] md:mx-auto md:w-[90%] md:flex-row md:justify-center md:gap-0"
     >
-      <section
-        class="relative flex items-center justify-center md:basis-[52.5%]"
-      >
+      <section class="relative flex items-center justify-center md:basis-1/2">
         <!-- left/top image  -->
         <div class="w-[80%] md:w-full">
           <img
@@ -71,22 +69,22 @@
         </div>
       </section>
       <!-- form  -->
-      <section class="flex justify-center md:mt-[0.5vw] md:basis-[45%]">
+      <section class="flex justify-center md:mt-2 md:basis-[45%]">
         <form
           dir="rtl"
-          class="flex h-fit w-[80%] flex-col items-center gap-[4vw] rounded-[5vw] border-2 border-rgba(3,81,70,1) py-[5vw] font-Khand text-[3.5vw] shadow-0px,25px,50px,-12px shadow-rgba(209,213,219,50%) md:w-full md:gap-[1.5vw] md:rounded-[2.5vw] md:py-[2vw] md:text-[1.25vw]"
+          class="flex h-[95%] w-[80%] flex-col items-center justify-evenly gap-4 rounded-2xl border-2 border-rgba(3,81,70,1) py-4 font-Khand text-xs shadow-0px,25px,50px,-12px shadow-rgba(209,213,219,50%) sm:py-8 sm:text-base md:w-full md:gap-0 md:rounded-3xl md:py-0 md:text-xs lg:text-sm xl:text-base"
           action=""
         >
           <legend
-            class="font-IR_Kelma text-[5vw] text-rgba(55,65,81,1) md:mr-[3vw] md:self-start md:text-[2.25vw]"
+            class="font-IR_Kelma text-base text-rgba(55,65,81,1) sm:text-2xl md:mr-[5%] md:self-start md:text-lg lg:text-2xl xl:text-3xl"
           >
             هر چه میخواهد دل تنگت بگو!
           </legend>
           <!-- name input -->
-          <div class="flex w-[90%] flex-col gap-[0.5vw]">
-            <label class="mr-[1vw]" for="name">نام</label>
+          <div class="flex w-[90%] flex-col gap-1">
+            <label class="mr-1" for="name">نام</label>
             <input
-              class="w-full rounded-[1vw] border border-rgba(3,81,70,1) p-[2vw] focus:outline-rgba(3,81,70,1) md:rounded-[0.5vw] md:p-[1vw]"
+              class="w-full rounded border border-rgba(3,81,70,1) p-2 focus:outline-rgba(3,81,70,1) md:p-1 lg:min-h-10 xl:min-h-12"
               type="text"
               name="name"
               id="name"
@@ -95,11 +93,11 @@
             />
           </div>
           <!-- email input -->
-          <div class="flex w-[90%] flex-col gap-[0.5vw]">
-            <label class="mr-[1vw]" for="email">ایمیل</label>
+          <div class="flex w-[90%] flex-col gap-1">
+            <label class="mr-1" for="email">ایمیل</label>
             <input
               dir="ltr"
-              class="w-full rounded-[1vw] border border-rgba(3,81,70,1) p-[2vw] focus:outline-rgba(3,81,70,1) focus:valid:outline-green-400 focus:invalid:outline-red-600 md:rounded-[0.5vw] md:p-[1vw]"
+              class="w-full rounded border border-rgba(3,81,70,1) p-2 focus:outline-rgba(3,81,70,1) focus:valid:outline-green-400 focus:invalid:outline-red-600 md:p-1 lg:min-h-10 xl:min-h-12"
               type="email"
               name="email"
               id="email"
@@ -108,10 +106,10 @@
             />
           </div>
           <!-- text input -->
-          <div class="flex w-[90%] flex-col gap-[0.5vw]">
-            <label class="mr-[1vw]" for="review">پیام شما</label>
+          <div class="flex w-[90%] flex-col gap-1">
+            <label class="mr-1" for="review">پیام شما</label>
             <textarea
-              class="min-h-[25vw] w-full resize-none rounded-[1vw] border border-rgba(3,81,70,1) p-[2vw] focus:outline-rgba(3,81,70,1) md:min-h-[10vw]"
+              class="min-h-20 w-full resize-none rounded border border-rgba(3,81,70,1) p-2 focus:outline-rgba(3,81,70,1) md:min-h-16 lg:min-h-28"
               name="review"
               id="review"
               required
@@ -119,9 +117,9 @@
             ></textarea>
           </div>
           <!-- submit btn -->
-          <div class="md:mr-[3vw] md:self-start">
+          <div class="md:mr-[5%] md:self-start">
             <button
-              class="rounded-[5vw] bg-rgba(3,81,70,1) px-[10vw] py-[2vw] tracking-tighter text-white md:px-[4vw] md:py-[0.75vw]"
+              class="rounded-3xl bg-rgba(3,81,70,1) px-8 py-1.5 tracking-tighter text-white md:px-8 md:py-1.5 lg:px-12"
               type="submit"
             >
               با ما ارتباط بگیر
